--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,41 @@
+#  Application files
+*.apk
+*.ap_
+
+# Files for the Dalvik VM
+*.dex
+
+# Java class files
+*.class
+
+# Generated files
+bin/
+gen/
+
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+#Log Files
+*.log
+
+*.classpath
+*.properties
+*.DS_Store
+*.settings
+lint.xml
+
+*.project
+
+*.idea
 *.iml
-.gradle
+
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
 /.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
+/.idea
 /captures
-.externalNativeBuild
-.cxx
+
+.idea/misc.xml
